Created media queries for the about page

--- a/about.html
+++ b/about.html
@@ -309,88 +309,103 @@
 
         <!-- Hobbies -->
         <section id="about-hobbies">
-            <!-- Procreate -->
-            <article class="about-hobby-box">
-                <div class="hobby-box-headline">
-                    <h3>Procreate</h3>
-                </div>
-                <div class="about-box-image">
-                    <img class="box-image" src="assets/images/hobby-procreate.webp"
-                        alt="Procreate drawing of tiny person on a book drawing with pencils">
-                </div>
-                <div class="hobby-bodytext">
-                    <p>
-                        Min fritid går bl.a. med at tegne og udtænke ideer med programmet Procreate. Jeg nyder at blive
-                        dygtigere ved at følge tutorials og forbedre mine færdigheder i programmet.
-                    </p>
-                </div>
-                <div class="about-box-arrow-down">
-                    <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
-                </div>
-            </article>
+            <div>
+                <h3>
+                    Fritidsprojekter og hobbyer
+                </h3>
+            </div>
 
-            <!-- Fotografering -->
-            <article class="about-hobby-box">
-                <div class="hobby-box-headline">
-                    <h3>Fotografering</h3>
-                </div>
-                <div class="about-box-image">
-                    <img class="box-image" src="assets/images/hobby-photography.webp"
-                        alt="Image of blue flower in green field">
-                </div>
-                <div class="hobby-bodytext">
-                    <p>
-                        Selvom foto også er en del af uddannelsen fra et professionelt synspunkt, nyder jeg også at tage
-                        fotos i min fritid. Jeg elsker, når jeg fanger præcis det øjeblik og den stemning, som jeg
-                        ønsker.
-                    </p>
-                </div>
-                <div class="about-box-arrow-down">
-                    <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
-                </div>
-            </article>
+            <div id="about-hobbies-boxes">
+                <!-- Procreate -->
+                <article class="about-hobby-box">
+                    <div class="hobby-box-headline">
+                        <h3>Procreate</h3>
+                    </div>
+                    <div class="about-box-image">
+                        <img class="box-image" src="assets/images/hobby-procreate.webp"
+                            alt="Procreate drawing of tiny person on a book drawing with pencils">
+                    </div>
+                    <div class="hobby-bodytext">
+                        <p>
+                            Min fritid går bl.a. med at tegne og udtænke ideer med programmet Procreate. Jeg nyder at
+                            blive
+                            dygtigere ved at følge tutorials og forbedre mine færdigheder i programmet.
+                        </p>
+                    </div>
+                    <div class="about-box-arrow-down">
+                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
+                    </div>
+                </article>
 
-            <!-- Perleplader -->
-            <article class="about-hobby-box">
-                <div class="hobby-box-headline">
-                    <h3>Perleplader</h3>
-                </div>
-                <div class="about-box-image">
-                    <img class="box-image" src="assets/images/hobby-creative.webp"
-                        alt="Image of blue flower in green field">
-                </div>
-                <div class="hobby-bodytext">
-                    <p>
-                        Når jeg rigtig skal hygge mig, designer jeg mine perleplader i Procreate, og laver dem bagefter
-                        med de mange utallige farver, jeg nu har. De bliver til fine køleskabsmagneter og kreationer,
-                        som sættes i rammer.
-                    </p>
-                </div>
-                <div class="about-box-arrow-down">
-                    <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
-                </div>
-            </article>
+                <!-- Fotografering -->
+                <article class="about-hobby-box">
+                    <div class="hobby-box-headline">
+                        <h3>Fotografering</h3>
+                    </div>
+                    <div class="about-box-image">
+                        <img class="box-image" src="assets/images/hobby-photography.webp"
+                            alt="Image of blue flower in green field">
+                    </div>
+                    <div class="hobby-bodytext">
+                        <p>
+                            Selvom foto også er en del af uddannelsen fra et professionelt synspunkt, nyder jeg også at
+                            tage
+                            fotos i min fritid. Jeg elsker, når jeg fanger præcis det øjeblik og den stemning, som jeg
+                            ønsker.
+                        </p>
+                    </div>
+                    <div class="about-box-arrow-down">
+                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
+                    </div>
+                </article>
 
-            <!-- Computerspil -->
-            <article class="about-hobby-box">
-                <div class="hobby-box-headline">
-                    <h3>Computerspil</h3>
-                </div>
-                <div class="about-box-image">
-                    <img class="box-image" src="assets/images/hobby-gaming.webp"
-                        alt="Image of blue flower in green field">
-                </div>
-                <div class="hobby-bodytext">
-                    <p>
-                        I min fritid spiller jeg også forskellige computer- og konsolspil. Jeg synes, det er en fed måde
-                        at koble af på, hvor tankerne har tid til at være på pause. På den måde kan jeg stille helt
-                        skarpt igen, når jeg går videre med et igangværende projekt.
-                    </p>
-                </div>
-                <div class="about-box-arrow-down">
-                    <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
-                </div>
-            </article>
+                <!-- Perleplader -->
+                <article class="about-hobby-box">
+                    <div class="hobby-box-headline">
+                        <h3>Perleplader</h3>
+                    </div>
+                    <div class="about-box-image">
+                        <img class="box-image" src="assets/images/hobby-creative.webp"
+                            alt="Image of blue flower in green field">
+                    </div>
+                    <div class="hobby-bodytext">
+                        <p>
+                            Når jeg rigtig skal hygge mig, designer jeg mine perleplader i Procreate, og laver dem
+                            bagefter
+                            med de mange utallige farver, jeg nu har. De bliver til fine køleskabsmagneter og
+                            kreationer,
+                            som sættes i rammer.
+                        </p>
+                    </div>
+                    <div class="about-box-arrow-down">
+                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
+                    </div>
+                </article>
+
+                <!-- Computerspil -->
+                <article class="about-hobby-box">
+                    <div class="hobby-box-headline">
+                        <h3>Computerspil</h3>
+                    </div>
+                    <div class="about-box-image">
+                        <img class="box-image" src="assets/images/hobby-gaming.webp"
+                            alt="Image of blue flower in green field">
+                    </div>
+                    <div class="hobby-bodytext">
+                        <p>
+                            I min fritid spiller jeg også forskellige computer- og konsolspil. Jeg synes, det er en fed
+                            måde
+                            at koble af på, hvor tankerne har tid til at være på pause. På den måde kan jeg stille helt
+                            skarpt igen, når jeg går videre med et igangværende projekt.
+                        </p>
+                    </div>
+                    <div class="about-box-arrow-down">
+                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
+                    </div>
+                </article>
+            </div>
+
+
         </section>
 
         <!-- Call to action -->
@@ -443,7 +458,7 @@
                     <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
                 </a>
                 <h5>© 2024 Stine Julius | Hibiscusvej 20 | 5200 Odense V</h5>
-            </div> 
+            </div>
         </section>
     </footer>
 </body>
