Inserted animation and movingart projects, and styled it so it fits
Problem: because it fits perfectly now, they are not working correct responsive.

--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
                     <img src="assets/illustrations/leaf-right.svg" alt="green leaf pointing right">
                 </div>
             </div>
-                
+
         </section>
 
         <section id="projects">
@@ -155,8 +155,7 @@
                             <h3>Animation Waterdroplet</h3>
                         </div>
                         <div class="project-box-image">
-                            <img class="box-image" src="assets/images/project-prototype.png"
-                                alt="Prototype of Landsbyens Fortællinger app">
+                            <div class="project-animation-waterdrop"></div>
                         </div>
                         <div class="box-bodytext">
                             <h4>Studieprojekt</h4>
@@ -278,8 +277,9 @@
                             <h3>MovingArt</h3>
                         </div>
                         <div class="project-box-image">
-                            <img class="box-image" src="assets/images/project-prototype.png"
-                                alt="Prototype of Landsbyens Fortællinger app">
+                            <video class="box-image" controls> 
+                                <source src="assets/images/project-movingart.mp4" type="video/mp4">
+                            </video>
                         </div>
                         <div class="box-bodytext">
                             <h4>Studieprojekt</h4>
