--- a/projects.html
+++ b/projects.html
@@ -155,7 +155,9 @@
                             <h3>Animation Waterdroplet</h3>
                         </div>
                         <div class="project-box-image">
-                            <div class="project-animation-waterdrop"></div>
+                            <video class="box-image" controls> 
+                                <source src="assets/images/project-animation.mp4" type="video/mp4">
+                            </video>
                         </div>
                         <div class="box-bodytext">
                             <h4>Studieprojekt</h4>
