Edited all attributes on all img tags to fit the target group
Also fixed a mistake in the projects.css file

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <header>
         <section id="header-box">
             <a class="logo" href="index.html">
-                <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
+                <img src="assets/illustrations/logo.svg" alt="Stine Julius's logo">
             </a>
 
             <!-- Desktop -->
@@ -47,7 +47,7 @@
             </nav>
 
             <!-- Mobile -->
-            <img id="header-menu-js" src="assets/illustrations/menu.svg" alt="Burger Menu">
+            <img id="header-menu-js" src="assets/illustrations/menu.svg" alt="Menu ikon">
             <nav id="header-menu-content-js" class="menu">
                 <a class="menu-link" href="index.html">
                     <h3>
@@ -77,7 +77,7 @@
     <main>
         <section id="intro-about">
             <h1>OM MIG</h1>
-            <img src="assets/images/profilepicture-forest-front.webp" alt="Profile picture of Stine Julius">
+            <img src="assets/images/profilepicture-forest-front.webp" alt="Profilbillede af Stine Julius">
         </section>
 
         <section id="about-text-section">
@@ -109,9 +109,9 @@
 
         <section class="about-flower-decoration">
             <div class="flowers">
-                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
-                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
-                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
+                <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
+                <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
+                <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
             </div>
         </section>
 
@@ -128,7 +128,7 @@
                             <h3>Figma</h3>
                         </div>
                         <div>
-                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                         </div>
                     </div>
                     <div class="quali-middle">
@@ -148,7 +148,7 @@
                         </p>
                     </div>
                     <div class="quali-bottom">
-                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="">
+                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="Pil op ikon">
                     </div>
                 </article>
 
@@ -161,7 +161,7 @@
                             <h3>Web- og grafiskdesign</h3>
                         </div>
                         <div>
-                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                         </div>
                     </div>
                     <div class="quali-middle">
@@ -175,7 +175,7 @@
                         </p>
                     </div>
                     <div class="quali-bottom">
-                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="">
+                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="Pil op ikon">
                     </div>
                 </article>
 
@@ -187,7 +187,7 @@
                             <h3>Creative Cloud</h3>
                         </div>
                         <div>
-                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                         </div>
                     </div>
                     <div class="quali-middle">
@@ -210,7 +210,7 @@
                         </p>
                     </div>
                     <div class="quali-bottom">
-                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="">
+                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="Pil op ikon">
                     </div>
                 </article>
 
@@ -222,7 +222,7 @@
                             <h3>UI/UX</h3>
                         </div>
                         <div>
-                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                         </div>
                     </div>
                     <div class="quali-middle">
@@ -237,7 +237,7 @@
                         </p>
                     </div>
                     <div class="quali-bottom">
-                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="">
+                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="Pil op ikon">
                     </div>
                 </article>
 
@@ -249,7 +249,7 @@
                             <h3>Copywriting</h3>
                         </div>
                         <div>
-                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                         </div>
                     </div>
                     <div class="quali-middle">
@@ -265,7 +265,7 @@
                         </p>
                     </div>
                     <div class="quali-bottom">
-                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="">
+                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="Pil op ikon">
                     </div>
                 </article>
 
@@ -277,7 +277,7 @@
                             <h3>HTML & CSS</h3>
                         </div>
                         <div>
-                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                         </div>
                     </div>
                     <div class="quali-middle">
@@ -291,7 +291,7 @@
                         </p>
                     </div>
                     <div class="quali-bottom">
-                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="">
+                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="Pil op ikon">
                     </div>
                 </article>
             </div>
@@ -301,9 +301,9 @@
 
         <section class="about-flower-decoration">
             <div class="flowers">
-                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
-                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
-                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
+                <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
+                <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
+                <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
             </div>
         </section>
 
@@ -323,7 +323,7 @@
                     </div>
                     <div class="about-box-image">
                         <img class="box-image" src="assets/images/hobby-procreate.webp"
-                            alt="Procreate drawing of tiny person on a book drawing with pencils">
+                            alt="Tegning lavet i Procreate af en pige som sidder oven på en bog og tegner med blyanter">
                     </div>
                     <div class="hobby-bodytext">
                         <p>
@@ -333,7 +333,7 @@
                         </p>
                     </div>
                     <div class="about-box-arrow-down">
-                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
+                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                     </div>
                 </article>
 
@@ -344,7 +344,7 @@
                     </div>
                     <div class="about-box-image">
                         <img class="box-image" src="assets/images/hobby-photography.webp"
-                            alt="Image of blue flower in green field">
+                            alt="Foto af en blå blomst midt i grønt græs">
                     </div>
                     <div class="hobby-bodytext">
                         <p>
@@ -355,7 +355,7 @@
                         </p>
                     </div>
                     <div class="about-box-arrow-down">
-                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
+                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                     </div>
                 </article>
 
@@ -366,7 +366,7 @@
                     </div>
                     <div class="about-box-image">
                         <img class="box-image" src="assets/images/hobby-creative.webp"
-                            alt="Image of blue flower in green field">
+                            alt="Opbevaringskasse med perler samt to perleplader af en høne og en ko">
                     </div>
                     <div class="hobby-bodytext">
                         <p>
@@ -378,7 +378,7 @@
                         </p>
                     </div>
                     <div class="about-box-arrow-down">
-                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
+                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                     </div>
                 </article>
 
@@ -389,7 +389,7 @@
                     </div>
                     <div class="about-box-image">
                         <img class="box-image" src="assets/images/hobby-gaming.webp"
-                            alt="Image of blue flower in green field">
+                            alt="Stine Julius som sidder og spiller computer">
                     </div>
                     <div class="hobby-bodytext">
                         <p>
@@ -400,7 +400,7 @@
                         </p>
                     </div>
                     <div class="about-box-arrow-down">
-                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
+                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                     </div>
                 </article>
             </div>
@@ -455,7 +455,7 @@
         <section id="bottom-footer">
             <div id="bottom-footer-box">
                 <a class="logo" href="index.html">
-                    <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
+                    <img src="assets/illustrations/logo.svg" alt="Stine Julius's logo">
                 </a>
                 <h5>© 2024 Stine Julius | Hibiscusvej 20 | 5200 Odense V</h5>
             </div>
