--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <header>
         <section id="header-box">
             <a class="logo" href="index.html">
-                <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
+                <img src="assets/illustrations/logo.svg" alt="Stine Julius's logo">
             </a>
 
             <!-- Desktop -->
@@ -47,7 +47,7 @@
             </nav>
 
             <!-- Mobile -->
-            <img id="header-menu-js" src="assets/illustrations/menu.svg" alt="Burger Menu">
+            <img id="header-menu-js" src="assets/illustrations/menu.svg" alt="Menu ikon">
             <nav id="header-menu-content-js" class="menu">
                 <a class="menu-link" href="index.html">
                     <h3>
@@ -78,9 +78,9 @@
         <section id="intro-contact">
             <h1>KONTAKT</h1>
             <div id="flowers">
-                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
-                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
-                <img src="assets/illustrations/small-flower.svg" alt="Small green flower">
+                <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
+                <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
+                <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
             </div>
             <div id="contact-headlines">
                 <h3>Har du lyst til at starte et samarbejde med mig?</h3>
@@ -105,7 +105,7 @@
 
         <section>
             <div id="contact-picture">
-                <img src="assets/images/profilepicture-studio.webp" alt="Photo of Stine Julius">
+                <img src="assets/images/profilepicture-studio.webp" alt="Profilbillede af Stine Julius">
             </div>
         </section>
     </main>
@@ -145,7 +145,7 @@
         <section id="bottom-footer">
             <div id="bottom-footer-box">
                 <a class="logo" href="index.html">
-                    <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
+                    <img src="assets/illustrations/logo.svg" alt="Stine Julius's logo">
                 </a>
                 <h5>© 2024 Stine Julius | Hibiscusvej 20 | 5200 Odense V</h5>
             </div> 
