--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <section id="header-box">
             <a class="logo" href="index.html">
-                <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
+                <img src="assets/illustrations/logo.svg" alt="Stine Julius's logo">
             </a>
 
             <!-- Desktop -->
@@ -47,7 +47,7 @@
             </nav>
 
             <!-- Mobile -->
-            <img id="header-menu-js" src="assets/illustrations/menu.svg" alt="Burger Menu">
+            <img id="header-menu-js" src="assets/illustrations/menu.svg" alt="Menu ikon">
             <nav id="header-menu-content-js" class="menu">
                 <a class="menu-link" href="index.html">
                     <h3>
@@ -87,23 +87,24 @@
         <section id="introduction-path">
             <!-- For desktop -->
             <div id="mountains-desktop">
-                <img src="assets/illustrations/circle-mountains.svg" alt="vector cirle and mountains">
+                <img src="assets/illustrations/circle-mountains.svg"
+                    alt="Illustration af en halvcirkel i baggrunden med bjerge foran og en sø mellem bjergene">
             </div>
 
             <div id="path-position-desktop">
-                <img id="path-desktop" src="assets/illustrations/big-path.svg" alt="Big swinging path illustration">
+                <img id="path-desktop" src="assets/illustrations/big-path.svg"
+                    alt="Illustration af en svingende sti som bevæger sig fra toppen til bunden">
             </div>
 
             <!-- For mobile -->
             <div id="mountains">
-                <img id="left-mountains" src="assets/illustrations/left-mountains.svg"
-                    alt="Vector mountain illustration">
-                <img id="right-mountains" src="assets/illustrations/right-mountains.svg"
-                    alt="Vector mountain illustration">
+                <img id="left-mountains" src="assets/illustrations/left-mountains.svg" alt="Illustration af bjerge">
+                <img id="right-mountains" src="assets/illustrations/right-mountains.svg" alt="Illustration af bjerge">
             </div>
 
             <div id="path-position">
-                <img id="path" src="assets/illustrations/path.svg" alt="Swinging path illustration">
+                <img id="path" src="assets/illustrations/path.svg"
+                    alt="Illustration af en svingende sti som bevæger sig fra toppen til bunden">
             </div>
 
             <div id="front-page-content">
@@ -139,7 +140,7 @@
 
                     <div class="image-side-aligned">
                         <img class="index-image" src="assets/images/profilepicture-forest-back.webp"
-                            alt="Profilbillede af Stine Julius">
+                            alt="Billede af Stine Julius">
                     </div>
 
                     <div class="textbox-right">
@@ -216,7 +217,7 @@
         <section id="bottom-footer">
             <div id="bottom-footer-box">
                 <a class="logo" href="index.html">
-                    <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
+                    <img src="assets/illustrations/logo.svg" alt="Stine Julius's logo">
                 </a>
                 <h5>© 2024 Stine Julius | Hibiscusvej 20 | 5200 Odense V</h5>
             </div>
