--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     <header>
         <section id="header-box">
             <a class="logo" href="index.html">
-                <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
+                <img src="assets/illustrations/logo.svg" alt="Stine Julius's logo">
             </a>
 
             <!-- Desktop -->
@@ -47,7 +47,7 @@
             </nav>
 
             <!-- Mobile -->
-            <img id="header-menu-js" src="assets/illustrations/menu.svg" alt="Burger Menu">
+            <img id="header-menu-js" src="assets/illustrations/menu.svg" alt="Menu ikon">
             <nav id="header-menu-content-js" class="menu">
                 <a class="menu-link" href="index.html">
                     <h3>
@@ -87,24 +87,24 @@
         <section id="leaves">
             <div id="leaf-band">
                 <div class="leaf-cluster">
-                    <img src="assets/illustrations/leaf-left.svg" alt="green leaf pointing left">
-                    <img src="assets/illustrations/leaf-right.svg" alt="green leaf pointing right">
+                    <img src="assets/illustrations/leaf-left.svg" alt="Illustration af et grønt blad">
+                    <img src="assets/illustrations/leaf-right.svg" alt="Illustration af et grønt blad">
                 </div>
                 <div class="leaf-cluster">
-                    <img src="assets/illustrations/leaf-left.svg" alt="green leaf pointing left">
-                    <img src="assets/illustrations/leaf-right.svg" alt="green leaf pointing right">
+                    <img src="assets/illustrations/leaf-left.svg" alt="Illustration af et grønt blad">
+                    <img src="assets/illustrations/leaf-right.svg" alt="Illustration af et grønt blad">
                 </div>
                 <div class="leaf-cluster">
-                    <img src="assets/illustrations/leaf-left.svg" alt="green leaf pointing left">
-                    <img src="assets/illustrations/leaf-right.svg" alt="green leaf pointing right">
+                    <img src="assets/illustrations/leaf-left.svg" alt="Illustration af et grønt blad">
+                    <img src="assets/illustrations/leaf-right.svg" alt="Illustration af et grønt blad">
                 </div>
                 <div class="leaf-cluster">
-                    <img src="assets/illustrations/leaf-left.svg" alt="green leaf pointing left">
-                    <img src="assets/illustrations/leaf-right.svg" alt="green leaf pointing right">
+                    <img src="assets/illustrations/leaf-left.svg" alt="Illustration af et grønt blad">
+                    <img src="assets/illustrations/leaf-right.svg" alt="Illustration af et grønt blad">
                 </div>
                 <div class="leaf-cluster">
-                    <img src="assets/illustrations/leaf-left.svg" alt="green leaf pointing left">
-                    <img src="assets/illustrations/leaf-right.svg" alt="green leaf pointing right">
+                    <img src="assets/illustrations/leaf-left.svg" alt="Illustration af et grønt blad">
+                    <img src="assets/illustrations/leaf-right.svg" alt="Illustration af et grønt blad">
                 </div>
             </div>
 
@@ -120,7 +120,7 @@
                         </div>
                         <div class="project-box-image">
                             <img class="box-image" src="assets/images/project-prototype.webp"
-                                alt="Prototype of Landsbyens Fortællinger app">
+                                alt="Prototype af Landsbyens Fortællinger appen">
                         </div>
                         <div class="box-bodytext">
                             <h4>Studieprojekt</h4>
@@ -145,7 +145,7 @@
                             <h4>Projektet er udarbejdet i Figma.</h4>
                         </div>
                         <div class="project-box-arrow-down">
-                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                         </div>
                     </article>
 
@@ -180,7 +180,7 @@
                             <h4>Projektet er udarbejdet i Adobe Illustrator og VisualStudioCode.</h4>
                         </div>
                         <div class="project-box-arrow-down">
-                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                         </div>
                     </article>
                 </div>
@@ -192,7 +192,7 @@
                             <h3>Selvportræt</h3>
                         </div>
                         <div class="project-box-image">
-                            <img class="box-image" src="assets/images/project-portrait.webp" alt="Selfportrait">
+                            <img class="box-image" src="assets/images/project-portrait.webp" alt="Illustreret portræt af Stine Julius ">
                         </div>
                         <div class="box-bodytext">
                             <h4>Eget projekt</h4>
@@ -207,7 +207,7 @@
                             <h4>Projektet er udarbejdet i Adobe Illustrator.</h4>
                         </div>
                         <div class="project-box-arrow-down">
-                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                         </div>
                     </article>
 
@@ -218,7 +218,7 @@
                         </div>
                         <div class="project-box-image">
                             <img class="box-image" src="assets/images/project-poster.webp"
-                                alt="Poster for Landsbyens Fortællinger app">
+                                alt="Plakat med Landsbyens Fortællinger app fremvist">
                         </div>
                         <div class="box-bodytext">
                             <h4>Studieprojekt</h4>
@@ -243,7 +243,7 @@
                             <h4>Projektet er udarbejdet i Illustrator.</h4>
                         </div>
                         <div class="project-box-arrow-down">
-                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                         </div>
                     </article>
                 </div>
@@ -256,7 +256,7 @@
                         </div>
                         <div class="project-box-image">
                             <img class="box-image" src="assets/images/projects-product-picture.webp"
-                                alt="Productphoto of Instax camera">
+                                alt="Produktfoto af Instax kamera">
                         </div>
                         <div class="box-bodytext">
                             <h4>Eget projekt</h4>
@@ -269,7 +269,7 @@
                             <h4>Projektet er udarbejdet i Adobe Lightroom CC.</h4>
                         </div>
                         <div class="project-box-arrow-down">
-                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                         </div>
                     </article>
 
@@ -298,7 +298,7 @@
                             <h4>Projektet er udarbejdet i Adobe Photoshop og Adobe After Effects.</h4>
                         </div>
                         <div class="project-box-arrow-down">
-                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Arrow down">
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Pil ned ikon">
                         </div>
                     </article>
                 </div>
@@ -350,7 +350,7 @@
         <section id="bottom-footer">
             <div id="bottom-footer-box">
                 <a class="logo" href="index.html">
-                    <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
+                    <img src="assets/illustrations/logo.svg" alt="Stine Julius's logo">
                 </a>
                 <h5>© 2024 Stine Julius | Hibiscusvej 20 | 5200 Odense V</h5>
             </div>
